fix(twitch): leaderboard collapse arrow

--- a/styles/twitch/catppuccin.user.less
+++ b/styles/twitch/catppuccin.user.less
@@ -1282,6 +1282,12 @@
     .footer__glitch path[d="m18 17 4-4V2H6v15h4v4l4-4h4zM12 6h2v6h-2V6zm7 0h-2v6h2V6z"] {
       fill: @text;
     }
+
+    .bits-leaderboard-expanded__collapse {
+      svg {
+        fill: @surface0;
+      }
+    }
   }
 }
 
